k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: react-microservice-template
  namespace: default
spec:
  selector:
    app: react-microservice-template
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
