k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-microservice-template-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: cloudflare-cluster-issuer
spec:
  ingressClassName: nginx
  rules:
  - host: anthony-allen.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-microservice-template
            port:
              number: 80
  tls:
  - hosts:
    - anthony-allen.com
    secretName: react-microservice-template-tls
